--- a/roles/mailserver/tasks/main.yml
+++ b/roles/mailserver/tasks/main.yml
@@ -8,8 +8,8 @@
   tags: solr
 - include: checkrbl.yml
   tags: checkrbl
-- include: z-push.yml
-  tags: zpush
+#- include: z-push.yml
+#  tags: zpush
 - include: autoconfig.yml
   tags: autoconfig
 
