--- a/roles/mailserver/tasks/z-push.yml
+++ b/roles/mailserver/tasks/z-push.yml
@@ -2,9 +2,9 @@
   apt: pkg={{ item }} state=installed
   with_items:
     - php-soap
-    - php5
-    - php5-cli
-    - php5-imap
+    - php
+    - php-cli
+    - php-imap
   tags:
     - dependencies
 
