--- a/roles/common/tasks/users.yml
+++ b/roles/common/tasks/users.yml
@@ -1,9 +1,9 @@
 - name: Create main user account
   user: name={{ main_user_name }} state=present shell={{ main_user_shell }} groups=sudo
 
-- name: Give main user account sudo power
+  #`- name: Give main user account sudo power
   template: >-
-    src=roles/common/templates/sudoers.j2
+  #template: src=roles/common/templates/sudoers.j2 dest=/etc/sudoers owner=root group=root mode=0440 validate='visudo -cf %s'
     dest=/etc/sudoers.d/sudoers
     owner=root
     group=root
