--- a/roles/common/tasks/google_auth.yml
+++ b/roles/common/tasks/google_auth.yml
@@ -2,11 +2,12 @@
 # Defines tasks applicable for Google Authenticator.
 
 - name: Ensure required packages are installed
-  apt: pkg={{ item }} state=present
-  with_items:
-    - libpam-google-authenticator
-    - libpam0g-dev
-    - libqrencode3
+  apt:
+    state: present
+    name:
+      - libpam-google-authenticator
+      - libpam0g-dev
+      - libqrencode4
   tags:
     - dependencies
 
