--- a/roles/common/tasks/ufw.yml
+++ b/roles/common/tasks/ufw.yml
@@ -3,7 +3,10 @@
 # ufw includes sensible ICMP defaults.
 
 - name: Install ufw
-  apt: pkg=ufw state=present
+  apt:
+    state: present
+    name:
+      - ufw
   tags:
     - dependencies
     - ufw
