--- a/roles/ircbouncer/tasks/znc.yml
+++ b/roles/ircbouncer/tasks/znc.yml
@@ -1,9 +1,10 @@
 # more or less as per http://wiki.znc.in/Running_ZNC_as_a_system_daemon
 
 - name: Install znc
-  apt: pkg={{ item }} state=installed
-  with_items:
-    - znc
+  apt:
+    state: present
+    name:
+      - znc
   tags:
     - dependencies
 
