--- a/roles/monitoring/tasks/collectd.yml
+++ b/roles/monitoring/tasks/collectd.yml
@@ -1,5 +1,7 @@
 - name: Install collectd
-  apt: pkg=collectd state=installed
+  apt:
+    state: latest
+    name: collectd
   tags:
       - dependencies
 
