--- a/roles/monitoring/tasks/monit.yml
+++ b/roles/monitoring/tasks/monit.yml
@@ -6,7 +6,9 @@
   notify: restart apache
 
 - name: Install monit
-  apt: pkg=monit state=installed
+  apt:
+    state: latest
+    name: monit
   tags:
     - dependencies
 
