--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -10,26 +10,30 @@
     - dependencies
 
 - name: Install necessities and nice-to-haves
-  apt: pkg={{ item }} state=present
-  with_items:
-    - apache2
-    - apt-transport-https
-    - apticron
-    - build-essential
-    - debian-goodies
-    - git
-    - htop
-    - iftop
-    - iotop
-    - molly-guard
-    - mosh
-    - python3-software-properties
-    - ruby
-    - screen
-    - sudo
-    - unattended-upgrades
-    - vim
-    - zsh
+  apt:
+    state: latest
+    name:
+      - apache2
+      - apache2-data
+      - apache2-bin
+      - apache2-utils
+      - apt-transport-https
+      - apticron
+      - build-essential
+      - debian-goodies
+      - git
+      - htop
+      - iftop
+      - iotop
+      - molly-guard
+      - mosh
+      - python3-software-properties
+      - ruby
+      - screen
+      - sudo
+      - unattended-upgrades
+      - vim
+      - zsh
   tags:
     - dependencies
 
