--- a/roles/common/tasks/security.yml
+++ b/roles/common/tasks/security.yml
@@ -1,10 +1,11 @@
 - name: Install security-related packages
-  apt: pkg={{ item }} state=present
-  with_items:
-    - fail2ban
-    - whois
-    - lynis
-    - rkhunter
+  apt:
+   state: present
+   name:
+     - fail2ban
+     - whois
+     - lynis
+     - rkhunter
   tags:
     - dependencies
 
