--- a/roles/git/tasks/gitolite.yml
+++ b/roles/git/tasks/gitolite.yml
@@ -8,7 +8,10 @@
   user: name=www-data groups=git append=yes
 
 - name: Install gitolite3 package
-  apt: pkg=gitolite3 state=present
+  apt:
+    state: present
+    name:
+      - gitolite3
   tags:
     - dependencies
 
