--- a/roles/monitoring/tasks/logwatch.yml
+++ b/roles/monitoring/tasks/logwatch.yml
@@ -1,8 +1,9 @@
 - name: Install logwatch
-  apt: pkg={{ item }} state=present
-  with_items:
-    - libdate-manip-perl
-    - logwatch
+  apt:
+    state: present
+    name:
+      - libdate-manip-perl
+      - logwatch
   tags:
     - dependencies
 
