--- a/roles/tarsnap/tasks/tarsnap.yml
+++ b/roles/tarsnap/tasks/tarsnap.yml
@@ -8,11 +8,12 @@
 
 - name: Install dependencies for Tarsnap
   when: tarsnap_installed is failed
-  apt: pkg={{ item }} state=present
-  with_items:
-    - e2fslibs-dev
-    - libssl-dev
-    - zlib1g-dev
+  apt:
+    state: present
+    name:
+      - e2fslibs-dev
+      - libssl-dev
+      - zlib1g-dev
   tags:
     - dependencies
 
