--- a/roles/vpn/tasks/openvpn.yml
+++ b/roles/vpn/tasks/openvpn.yml
@@ -3,11 +3,12 @@
 # ref: https://library.linode.com/networking/openvpn/debian-6-squeeze
 
 - name: Install OpenVPN and dependencies
-  apt: pkg={{ item }} state=present
-  with_items:
-    - dnsmasq
-    - openvpn
-    - udev
+  apt:
+    state: present
+    name:
+      - dnsmasq
+      - openvpn
+      - udev
   tags:
     - dependencies
 
