--- a/roles/common/tasks/users.yml
+++ b/roles/common/tasks/users.yml
@@ -3,3 +3,30 @@
 
   #`- name: Give main user account sudo power
   #template: src=roles/common/templates/sudoers.j2 dest=/etc/sudoers owner=root group=root mode=0440 validate='visudo -cf %s'
+
+- name: Add users | create users, shell, home dirs
+  user:
+    name: '{{ item.username }}'
+    shell: /bin/bash
+    uid: '{{ item.uid }}'
+    createhome: yes
+#    home: "/users/{{ item.username }}"
+    comment: 'create with ansible'
+    groups: mail
+    append: yes
+  with_items: '{{users}}'
+
+#- name: Setup | authorized key upload
+#  authorized_key:
+#    user: "{{ item.username }}"
+#    key: "{{ lookup('file', 'pub_keys/{{ item.username }}.pub') }}"
+#  with_items: '{{users}}'
+
+- name: sudoers | update sudoers file and validate
+  lineinfile: "dest=/etc/sudoers
+  insertafter=EOF
+  line='{{ item.username }} ALL=(ALL) NOPASSWD: ALL'
+  regexp='^{{ item.username }} .*'
+  state=present"
+  when: item.use_sudo
+  with_items: '{{users}}'
