--- a/roles/mailserver/files/etc_dovecot_conf.d_10-master.conf
+++ b/roles/mailserver/files/etc_dovecot_conf.d_10-master.conf
@@ -18,7 +18,6 @@ service imap-login {
   inet_listener imap {
     port = 0
   }
-
   inet_listener imaps {
     #port = 993
     #ssl = yes
@@ -40,10 +39,15 @@ service pop3-login {
   inet_listener pop3 {
     port = 0
   }
-
   inet_listener pop3s {
     #port = 995
     #ssl = yes
+  }
+}
+
+service submission-login {
+  inet_listener submission {
+    #port = 587
   }
 }
 
@@ -60,8 +64,6 @@ service lmtp {
     #address =
     #port = 
   #}
-
-  user = vmail
 }
 
 service imap {
@@ -78,18 +80,25 @@ service pop3 {
   #process_limit = 1024
 }
 
+service submission {
+  # Max. number of SMTP Submission processes (connections)
+  #process_limit = 1024
+}
+
 service auth {
   # auth_socket_path points to this userdb socket by default. It's typically
-  # used by dovecot-lda, doveadm, possibly imap process, etc. Its default
-  # permissions make it readable only by root, but you may need to relax these
-  # permissions. Users that have access to this socket are able to get a list
-  # of all usernames and get results of everyone's userdb lookups.
-  unix_listener /var/spool/postfix/private/auth {
-    mode = 0666
-    user = postfix
-    group = postfix
-  }
-
+  # used by dovecot-lda, doveadm, possibly imap process, etc. Users that have
+  # full permissions to this socket are able to get a list of all usernames and
+  # get the results of everyone's userdb lookups.
+  #
+  # The default 0666 mode allows anyone to connect to the socket, but the
+  # userdb lookups will succeed only if the userdb returns an "uid" field that
+  # matches the caller process's UID. Also if caller's uid or gid matches the
+  # socket's uid or gid the lookup succeeds. Anything else causes a failure.
+  #
+  # To give the caller full permissions to lookup all users, set the mode to
+  # something else than 0666 and Dovecot lets the kernel enforce the
+  # permissions (e.g. 0777 allows everyone full permissions).
   unix_listener auth-userdb {
     mode = 0660
     user = vmail
@@ -97,23 +106,21 @@ service auth {
   }
 
   # Postfix smtp-auth
-  #unix_listener /var/spool/postfix/private/auth {
-  #  mode = 0666
-  #}
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0666
+    user = postfix
+    group = postfix
+  }
 
   # Auth process is run as this user.
-  user = vmail
+  user = $default_internal_user
 }
 
 service auth-worker {
   # Auth worker process is run as root by default, so that it can access
   # /etc/shadow. If this isn't necessary, the user should be changed to
   # $default_internal_user.
-  #user = vmail
-
-  unix_listener auth-worker {
-    user = vmail # same as above, mode and group are supported too
-  }
+  #user = root
 }
 
 service dict {
