--- a/roles/webmail/tasks/roundcube.yml
+++ b/roles/webmail/tasks/roundcube.yml
@@ -1,5 +1,5 @@
 - name: Determine whether roundcube is configured
-  stat: path=/var/www/roundcube/config.inc.php
+  stat: path=/var/lib/roundcube/config/config.inc.php
   register: roundcube_config
 
 - name: Install roundcube dependencies
@@ -25,19 +25,19 @@
   tags:
     - dependencies
 
-- name: Clone roundcube
-  git: repo=https://github.com/roundcube/roundcubemail.git
-       dest=/var/www/roundcube
-       version={{ webmail_version }}
-       update=no
-       accept_hostkey=yes
+#- name: Clone roundcube
+#  git: repo=https://github.com/roundcube/roundcubemail.git
+#       dest=/var/www/roundcube
+#       version={{ webmail_version }}
+#       update=no
+#       accept_hostkey=yes
 
 - name: Get Composer installer
   get_url: url=https://getcomposer.org/installer
            dest=/tmp/composer-installer
 
 - name: Copy composer configuration
-  copy: src=var_www_roundcube_composer.json dest=/var/www/roundcube/composer.json
+  copy: src=var_www_roundcube_composer.json dest=/var/lib/roundcube/composer.json
     owner=root
     group=www-data
     mode=0644
@@ -48,52 +48,52 @@
            creates=/root/composer.phar
 
 - name: Initialize composer
-  command: php /root/composer.phar install --no-dev
-           chdir=/var/www/roundcube
-           creates=/var/www/roundcube/vendor/autoload.php
+  command: php /root/composer.phar install --no-dev --no-interaction
+           chdir=/var/lib/roundcube
+           creates=/var/lib/roundcube/vendor/autoload.php
 
 - name: Remove installer directory
-  file: path=/var/www/roundcube/installer state=absent
+  file: path=/var/lib/roundcube/installer state=absent
 
 - name: Install Roundcube configuration
-  template: src=var_www_roundcube_config_config.inc.j2 dest=/var/www/roundcube/config/config.inc.php
+  template: src=var_www_roundcube_config_config.inc.j2 dest=/var/lib/roundcube/config/config.inc.php
 
 - name: Create db directory
   file: path=/decrypted/roundcube group=www-data mode=0775 state=directory
 
 - name: Make logs and temp directories writable by web server
-  file: path=/var/www/roundcube/{{ item }} mode=0775 state=directory
+  file: path=/var/lib/roundcube/{{ item }} mode=0775 state=directory
   with_items:
     - temp
     - logs
 
 - name: Make roundcube directory accessible to web server
-  file: path=/var/www/roundcube group=www-data recurse=yes state=directory
+  file: path=/var/lib/roundcube group=www-data recurse=yes state=directory
 
 - name: Install sieve plugin configuration
   copy: src=var_www_roundcube_plugins_managesieve_config.inc.php
-    dest=/var/www/roundcube/plugins/managesieve/config.inc.php
+    dest=/var/lib/roundcube/plugins/managesieve/config.inc.php
     owner=root
     group=www-data
     mode=0644
 
 - name: Install global sieve
   copy: src=var_www_roundcube_config_global.sieve
-    dest=/var/www/roundcube/config/global.sieve
+    dest=/var/lib/roundcube/config/global.sieve
     owner=root
     group=www-data
     mode=0644
 
 - name: Install carddav plugin configuration
   copy: src=var_www_roundcube_plugins_carddav_config.inc.php
-    dest=/var/www/roundcube/plugins/carddav/config.inc.php
+    dest=/var/lib/roundcube/plugins/carddav/config.inc.php
     owner=root
     group=www-data
     mode=0644
 
 - name: Install Google 2-factor authentication plugin configuration
   copy: src=var_www_roundcube_plugins_twofactor_gauthenticator_config.inc.php
-    dest=/var/www/roundcube/plugins/twofactor_gauthenticator/config.inc.php
+    dest=/var/lib/roundcube/plugins/twofactor_gauthenticator/config.inc.php
     owner=root
     group=www-data
     mode=0644
