--- a/roles/mailserver/files/etc_dovecot_conf.d_90-sieve.conf
+++ b/roles/mailserver/files/etc_dovecot_conf.d_90-sieve.conf
@@ -1,5 +1,4 @@
 plugin {
-  sieve = ~/.dovecot.sieve
-  sieve_dir = ~/sieve
-  sieve_before = /etc/dovecot/sieve/before.d
+  sieve = file:~/sieve;active=~/.dovecot.sieve
+  sieve_before = /usr/lib/dovecot/sieve-filter
 }
