--- a/roles/mailserver/handlers/main.yml
+++ b/roles/mailserver/handlers/main.yml
@@ -16,3 +16,6 @@
 
 - name: restart rspamd
   service: name=rspamd state=restarted
+
+- name: restart spamassassin
+  service: name=spamassassin state=restarted
