--- a/roles/mailserver/tasks/dovecot.yml
+++ b/roles/mailserver/tasks/dovecot.yml
@@ -38,12 +38,14 @@
 - name: Copy dovecot.conf into place
   copy: src=etc_dovecot_dovecot.conf dest=/etc/dovecot/dovecot.conf
 
-- name: Create before.d sieve scripts directory
-  file: path=/etc/dovecot/sieve/before.d state=directory owner=vmail group=dovecot recurse=yes mode=0770
-  notify: restart dovecot
+- name: Configure sieve program dir
+  copy: src=etc_dovecot_conf.d_sieve-extprograms.conf dest=/etc/dovecot/conf.d/90-sieve-extprograms.conf
+
+- name: Configure sieve-filter dir
+  file: path=/usr/lib/dovecot/sieve-filter state=directory owner=vmail group=dovecot recurse=yes mode=0770
 
 - name: Configure sieve script moving spam into Junk folder
-  copy: src=etc_dovecot_sieve_before.d_no-spam.sieve dest=/etc/dovecot/sieve/before.d/no-spam.sieve owner=vmail group=dovecot
+  copy: src=etc_dovecot_sieve_before.d_no-spam.sieve dest=/usr/lib/dovecot/sieve-filter/no-spam.sieve owner=vmail group=dovecot
   notify: restart dovecot
 
 - name: Copy additional Dovecot configuration files in place
