--- a/roles/mailserver/tasks/main.yml
+++ b/roles/mailserver/tasks/main.yml
@@ -4,6 +4,8 @@
   tags: dovecot
 - import_tasks: rspamd.yml
   tags: rspamd
+- include: spamassassin.yml
+  tags: spamassassin
 - import_tasks: solr.yml
   tags: solr
 - import_tasks: checkrbl.yml
@@ -12,4 +14,3 @@
   tags: zpush
 - import_tasks: autoconfig.yml
   tags: autoconfig
-
