--- a/roles/mailserver/tasks/rspamd.yml
+++ b/roles/mailserver/tasks/rspamd.yml
@@ -41,6 +41,7 @@
 
 - name: Configure Rspamd to use Redis
   copy: src=etc_rspamd_local.d_redis.conf dest=/etc/rspamd/local.d/redis.conf owner=root group=root mode="0644"
+  copy: src=etc_rspamd_worker-fuzzy.inc dest=/etc/rspamd/worker-fuzzy.inc owner=root group=root mode="0644"
   notify: restart rspamd
 
 - name: Copy DKIM configuration into place
@@ -50,6 +51,10 @@
     owner=root
     group=root
     mode="0644"
+  notify: restart rspamd
+
+- name: Copy actions.conf
+  copy: src=etc_rspamd_override.d_actions.conf dest=/etc/rspamd/override.d/actions.conf owner=root group=root mode="0644"
   notify: restart rspamd
 
 - name: Create dkim key directory
