--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -68,7 +68,7 @@
     name: en_US.UTF-8
     state: present
 
-- include: encfs.yml tags=encfs
+#- include: encfs.yml tags=encfs
 - include: users.yml tags=users
 - include: apache.yml tags=apache
 - include: ssl.yml tags=ssl
