--- a/roles/mailserver/tasks/postfix.yml
+++ b/roles/mailserver/tasks/postfix.yml
@@ -12,17 +12,17 @@
   tags:
     - dependencies
 
-- name: Create database user for mail server
-  postgresql_user: login_host=localhost login_user={{ db_admin_username }} login_password="{{ db_admin_password }}" name={{ mail_db_username }} password="{{ mail_db_password }}" encrypted=yes state=present
-  notify: import sql postfix
+#- name: Create database user for mail server
+#  postgresql_user: login_host=localhost login_user={{ db_admin_username }} login_password="{{ db_admin_password }}" name={{ mail_db_username }} password="{{ mail_db_password }}" encrypted=yes state=present
+#  notify: import sql postfix
 
-- name: Create database for mail server
-  postgresql_db: login_host=localhost login_user={{ db_admin_username }} login_password="{{ db_admin_password }}" name={{ mail_db_database }} state=present owner={{ mail_db_username }}
-  notify: import sql postfix
+#- name: Create database for mail server
+#  postgresql_db: login_host=localhost login_user={{ db_admin_username }} login_password="{{ db_admin_password }}" name={{ mail_db_database }} state=present owner={{ mail_db_username }}
+#  notify: import sql postfix
 
-- name: Copy import.sql
-  template: src=mailserver.sql.j2 dest=/etc/postfix/import.sql owner=root group=root mode=0600
-  notify: import sql postfix
+#- name: Copy import.sql
+#  template: src=mailserver.sql.j2 dest=/etc/postfix/import.sql owner=root group=root mode=0600
+#  notify: import sql postfix
 
 - name: Create postfix maps directory
   file: path=/etc/postfix/maps state=directory owner=root group=root
@@ -46,6 +46,10 @@
     - pgsql-virtual-alias-maps.cf
     - pgsql-virtual-mailbox-domains.cf
     - pgsql-virtual-mailbox-maps.cf
+    - pgsql-virtual-mailbox-limits.cf
+    - pgsql-virtual-domains-maps.cf
+    - pgsql-relay-domains.cf
+
   notify: restart postfix
 
 - name: Set firewall rules for postfix
