--- a/roles/common/tasks/apache.yml
+++ b/roles/common/tasks/apache.yml
@@ -9,6 +9,10 @@
   command: a2enmod headers creates=/etc/apache2/mods-enabled/headers.load
   notify: restart apache
 
+- name: Enable Apache rewrite module
+  command: a2enmod rewrite creates=/etc/apache2/mods-enabled/rewrite.load
+  notify: restart apache
+
 - name: Create ServerName configuration file for Apache
   template: src=fqdn.j2 dest=/etc/apache2/conf-available/fqdn.conf
 
