--- a/roles/mailserver/tasks/main.yml
+++ b/roles/mailserver/tasks/main.yml
@@ -1,18 +1,32 @@
-- import_tasks: postfix.yml
+- name: postfix
+  import_tasks: postfix.yml
   tags: postfix
-- import_tasks: dovecot.yml
+
+- name: dovecot
+  import_tasks: dovecot.yml
   tags: dovecot
-- import_tasks: rspamd.yml
+
+- name: rspamd
+  import_tasks: rspamd.yml
   tags: rspamd
+
 - include: spamassassin.yml
   tags: spamassassin
-- import_tasks: solr.yml
+
+- name: solr
+  import_tasks: solr.yml
   tags: solr
-- import_tasks: checkrbl.yml
+
+- name: checkrbl
+  import_tasks: checkrbl.yml
   tags: checkrbl
+
 - import_tasks: z-push.yml
   tags: zpush
-- import_tasks: autoconfig.yml
+- name: autoconfig
+  import_tasks: autoconfig.yml
   tags: autoconfig
-- include: mailman.yml
+
+- name: mailmain
+  import_tasks: mailman.yml
   tags: mailman
