--- a/roles/webmail/tasks/roundcube.yml
+++ b/roles/webmail/tasks/roundcube.yml
@@ -17,11 +17,19 @@
       - php-xml
       - php-mbstring
       - php-zip
+      - php-net-idna2
+      - php-imagick
+      - php-ldap
+      - php-date
+      - php-net-ldap3
       - roundcube
       - aspell
       - aspell-en
       - roundcube-plugins
       - roundcube-plugins-extra
+      - roundcube-pgsql
+      - roundcube-mysql
+      - roundcube-sqlite3
   tags:
     - dependencies
 
@@ -52,8 +60,8 @@
            chdir=/var/lib/roundcube
            creates=/var/lib/roundcube/vendor/autoload.php
 
-- name: Remove installer directory
-  file: path=/var/lib/roundcube/installer state=absent
+#- name: Remove installer directory
+#  file: path=/var/lib/roundcube/installer state=absent
 
 - name: Install Roundcube configuration
   template: src=var_www_roundcube_config_config.inc.j2 dest=/var/lib/roundcube/config/config.inc.php
@@ -68,7 +76,7 @@
     - logs
 
 - name: Make roundcube directory accessible to web server
-  file: path=/var/lib/roundcube group=www-data recurse=yes state=directory
+  file: path=/var/lib/roundcube owner=www-data group=www-data recurse=yes state=directory
 
 - name: Install sieve plugin configuration
   copy: src=var_www_roundcube_plugins_managesieve_config.inc.php
@@ -80,7 +88,7 @@
 - name: Install global sieve
   copy: src=var_www_roundcube_config_global.sieve
     dest=/var/lib/roundcube/config/global.sieve
-    owner=root
+    owner=www-data
     group=www-data
     mode=0644
 
