--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -68,13 +68,42 @@
     name: en_US.UTF-8
     state: present
 
-#- include: encfs.yml tags=encfs
-- include: users.yml tags=users
-- include: apache.yml tags=apache
-- include: ssl.yml tags=ssl
-- include: letsencrypt.yml tags=letsencrypt
-- include: ufw.yml tags=ufw
-- include: security.yml tags=security
-- include: ntp.yml tags=ntp
-- include: google_auth.yml tags=google_auth
-- include: postgres.yml
+- name: encfs
+  import_tasks: encfs.yml
+  tags: [ encfs ]
+  when: false
+
+- name: Users
+  import_tasks: users.yml
+  tags: [ users ]
+
+- name: Apache
+  import_tasks: apache.yml
+  tags: [ apache ]
+
+- name: ssl
+  import_tasks: ssl.yml
+  tags: [ ssl ]
+
+- name: Letsencrypt
+  import_tasks: letsencrypt.yml
+  tags: [ letsencrypt ]
+
+- name: ufw
+  import_tasks: ufw.yml
+  tags: [ ufw ]
+
+- name: security
+  import_tasks: security.yml
+  tags: [ security ]
+
+- name: ntp
+  import_tasks: ntp.yml
+  tags: [ ntp ]
+
+- name: google_auth
+  import_tasks: google_auth.yml
+  tags: [ google_auth ]
+
+- name: postgres
+  import_tasks: postgres.yml
