--- a/roles/common/tasks/users.yml
+++ b/roles/common/tasks/users.yml
@@ -1,9 +1,14 @@
 - name: Create main user account
   user: name={{ main_user_name }} state=present shell={{ main_user_shell }} groups=sudo
 
-  #`- name: Give main user account sudo power
-  template: >-
-  #template: src=roles/common/templates/sudoers.j2 dest=/etc/sudoers owner=root group=root mode=0440 validate='visudo -cf %s'
+#- name: Give main user account sudo power
+#  template: >-
+#    src=roles/common/templates/sudoers.j2
+#    dest=/etc/sudoers.d/sudoers
+#    owner=root
+#    group=root
+#    mode=0440
+#    validate='visudo -cf %s'
 
 - name: Add users | create users, shell, home dirs
   user:
@@ -15,13 +20,7 @@
     comment: 'create with ansible'
     groups: mail
     append: yes
-  with_items: '{{users}}'
-
-#- name: Setup | authorized key upload
-#  authorized_key:
-#    user: "{{ item.username }}"
-#    key: "{{ lookup('file', 'pub_keys/{{ item.username }}.pub') }}"
-#  with_items: '{{users}}'
+  with_items: '{{ users }}'
 
 - name: sudoers | update sudoers file and validate
   lineinfile: "dest=/etc/sudoers
@@ -30,4 +29,4 @@
   regexp='^{{ item.username }} .*'
   state=present"
   when: item.use_sudo
-  with_items: '{{users}}'
+  with_items: '{{ users }}'
