--- a/roles/ircbouncer/tasks/znc.yml
+++ b/roles/ircbouncer/tasks/znc.yml
@@ -1,7 +1,7 @@
 # more or less as per http://wiki.znc.in/Running_ZNC_as_a_system_daemon
 
 - name: Install znc
-  apt:
+  package:
     state: present
     name:
       - znc
