--- a/roles/mailserver/tasks/dovecot.yml
+++ b/roles/mailserver/tasks/dovecot.yml
@@ -1,5 +1,5 @@
 - name: Install Dovecot and related packages
-  apt:
+  package:
     update_cache: yes
     state: present
     name:
@@ -45,11 +45,7 @@
   file: path=/usr/lib/dovecot/sieve-filter state=directory owner=vmail group=dovecot recurse=yes mode=0770
 
 - name: Configure sieve script moving spam into Junk folder
-  copy: >-
   copy: src=etc_dovecot_sieve_before.d_no-spam.sieve dest=/usr/lib/dovecot/sieve-filter/no-spam.sieve owner=vmail group=dovecot
-    dest=/etc/dovecot/sieve/before.d/no-spam.sieve
-    owner=vmail
-    group=dovecot
   notify: restart dovecot
 
 - name: Copy additional Dovecot configuration files in place
