--- a/roles/mailserver/tasks/main.yml
+++ b/roles/mailserver/tasks/main.yml
@@ -10,8 +10,8 @@
   import_tasks: rspamd.yml
   tags: rspamd
 
-- include: spamassassin.yml
-  tags: spamassassin
+#- include: spamassassin.yml
+#  tags: spamassassin
 
 - name: solr
   import_tasks: solr.yml
@@ -21,8 +21,10 @@
   import_tasks: checkrbl.yml
   tags: checkrbl
 
-- import_tasks: z-push.yml
-  tags: zpush
+#- name: zpush
+#  import_tasks: z-push.yml
+#  tags: zpush
+
 - name: autoconfig
   import_tasks: autoconfig.yml
   tags: autoconfig
